fixing overflow

--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@ body{
     position: fixed;
     z-index: 100;
     background-color: transparent; 
+    
 }
 
 ul{
@@ -140,6 +141,7 @@ li a{
     background-color: rgb(0, 0, 0);
     margin-bottom: 20vh;
     cursor: default;
+    overflow-x: hidden;
 }
 
 .stickySoy{
@@ -147,6 +149,7 @@ li a{
     max-width: 100vw;
     height: 100vh;
     margin-bottom: 20vh;
+    
 }
 
 
@@ -162,6 +165,7 @@ li a{
     margin-bottom: 5vh;
     position: sticky;
     top: 8vh;
+    
 }
 
 .project0{
@@ -171,6 +175,7 @@ li a{
     top: 25vw;
     z-index: 1;
     margin-bottom: 60vh;
+    
 }
 .hrProject0{
     transform: translateY(-5.3vw);
